# ApiPerfDashboard

./: .editorconfig  .gitignore  README.md  docker-compose.yml
mcp_server/: README.md  pyproject.toml
mcp_server/mcp_server/: __init__.py  main.py  models.py  tools.py
src/ApiPerfDashboard.Api/: ApiPerfDashboard.Api.csproj  Dockerfile  Program.cs
src/ApiPerfDashboard.Api/Configuration/: DatabaseOptions.cs
src/ApiPerfDashboard.Api/Data/: MetricRepository.cs
src/ApiPerfDashboard.Api/HealthChecks/: MetricsDbHealthCheck.cs
src/ApiPerfDashboard.Api/Infrastructure/: HealthCheckResponseWriter.cs  MetricSchemaInitializer.cs
src/ApiPerfDashboard.Api/Models/: MetricIngestedResponse.cs  MetricRequest.cs  MetricSummaryQuery.cs  MetricSummaryRow.cs
src/ApiPerfDashboard.Api/Validation/: ValidationExtensions.cs
src/ApiPerfDashboard.Dashboard/: App.razor  Dockerfile  Program.cs
src/ApiPerfDashboard.Dashboard/Pages/: Index.razor  _Host.cshtml
src/ApiPerfDashboard.Dashboard/Shared/: MainLayout.razor
src/ApiPerfDashboard.Dashboard/wwwroot/css/: site.css
src/ApiPerfDashboard.Dashboard/wwwroot/js/: charts.js
