[project]
name = "mcp-server"
version = "0.1.0"
description = "A sample Model Context Protocol server exposing three tools."
requires-python = ">=3.10"
authors = [
  { name = "ApiPerfDashboard Team" }
]
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0"
]

[project.scripts]
mcp-server = "mcp_server.main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
